# api/internal/handler/sys/user/userdeletehandler.go
@@ -1,0 +1,28 @@
+package handler
+
+import (
+	"net/http"
+	logic "pure-go-zero-admin/api/internal/logic/sys/user"
+
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"pure-go-zero-admin/api/internal/svc"
+	"pure-go-zero-admin/api/internal/types"
+)
+
+func UserDeleteHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.DeleteUserReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := logic.NewUserDeleteLogic(r.Context(), svcCtx)
+		resp, err := l.UserDelete(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
